1999-07-22    <redman@scriptics.com>

	* Changed version to 8.2b2.

	* win/tclWinSock.c: Fixed hang with threads enabled, fixed
	semaphores with threads disabled.

	* win/safe.test: Fixed safe-6.3 with threads enabled.
	
	* win/Makefile.in:  Fixed calling of tcltest to fix safe.test
	failures due to path TCL_LIBRARY path.

	* win/tclWinPort.h: Block out include of sys/*.h in order to
	build extensions with MetroWerks compiler for Win32. [Bug: 2385]
	
	* generic/tclCmdMZ.c:
	* generic/tclIO.c: Fix ANSI-style prototypes based on patch from
	Ulrich Ring.  [Bug: 2391]
	
	* unix/Makefile.in: Need to make install-sh executable before
	calling (with chmod +x).  [Bug: 2413]
	
	* tests/var.test:
	* generic/tclVar.c:  Fixed bug that caused a seg. fault when using
	"array set a(b) {}", which is a bad array name anyway.  Now the
	"array set" command will return an error in this case.  Added test
	case and fixed existing test. [Bug: 2427]

1999-07-21    <redman@scriptics.com>

	* tests/info.test:
	* generic/tclParse.c:  Applied patch to fix "info complete"
	for the string {[a [b]}.  Patch from Peter Spjuth. [Bug: 2382]

	* doc/Utf.3:
	* generic/tcl.decls:
	* generic/tclDecls.h:
	* generic/tclUtf.c: Changed function declarations in
	non-platform-specific public APIs to use "unsigned long" instead of
	"size_t", which may not be defined on certain compilers (rather
	than include sys/types.h, which may not exist).
	
	* unix/Makefile.in: Added the Windows configure script to the
	distribution file list, already shipping configure.in and the .m4
	files, but needed the configure script itself.
	
	* win/makefile.vc: Changed version number of DDE package in VC++
	makefile to use 1.1 instead of 1.0.

	* doc/open.n: Added documentation of \\.\comX notation for opening
	serial ports on Windows (alternative to comX:).
	
	* tests/ioCmd.test:
	* doc/open.n:
	* win/tclWinSerial.c: Applied patch from Rolf Schroedter to add
	-pollinterval option to fconfigure to modify the maxblocktime used