@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: info.test,v 1.9 1999/07/22 02:15:45 redman Exp $
+# RCS: @(#) $Id: info.test,v 1.10 1999/07/23 23:40:29 redman Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -135,10 +135,10 @@ test info-5.3 {info complete option} {
     info complete {# Comment should be complete command}
 } 1
 test info-5.4 {info complete option} {
-    info complete {[a [b]}
-} 0
-test info-5.5 {info complete option} {
     info complete {[a [b] }
+} 0
+test info-5.5 {info complete option} {knownBug} {
+    info complete {[a [b]}
 } 0
 
 test info-6.1 {info default option} {
